Revision history for Mojolicious-Plugin-Tusu

0.30 2011/12/28

0.29 2011/12/28
  - Added get_component method.
  - Added render method on ComponentBase
  - Bundled Text::PSTemplate v0.41

0.28 2011/11/29
  - Generator namespaces has changed
  - Fixed a bug on generator that some file's permission was wrong

0.26 2011/11/25
  - M::T::ComponentBase::ini and set_ini removed. Use Mojo::Base::attr instead.
  - Text::PSTemplate v0.40 bundled.
  - Removed run_hook_reverse call in favor of emit_hook_reverse
  
0.25 2011/07/14
  - Tusu now is a Mojolicious plugin
  - PluginBase removed. ComponentBase is available instead.
  - Text::PSTemplate v0.36 bundled.

0.24 2011/07/14
  - Short cut for html escape activated

0.23 2011/07/09
  - Dependency on Mojolicious updated
  - A dependency for test specified

0.22 2011/06/30
  - output_encoding feature no longer available. Consider using
    Plack::Middleware instead.
  - Permission check is eased to inside document root

0.21 2011/06/22
  - ini and ini_set added in ComponentBase
  - Depencency updated
  
0.20 2011/06/21
  - Mojolicious::Command::Generate::TusuApp added
  - Static file bug on win fixed
  
0.19 2011/06/20
  - Pathes in templates without trailing slash are no longer autofilled with
    directory index
  - FIX: CGI mode bug on root access
  - input & output encoding can be auto detected

0.18 2011/06/10
  - url_abs added
  - Permission check activated
  - Directory Index can be a static file now
  - Fixed a bug on CGI mode
  - pst handler removed and tusu is available
  - error document method added

0.17 2011/06/08
  - File searching rule has been changed. It got similar behavior to apache 
  - directory_index method added
  - Compatibility with apache improved
  - bootstrap renewed

0.16 2011/06/01
  - Reduce messing app attr namaspace

0.15 2011/06/01
  - plug method now capable of multiple plugins at once

0.14 2011/06/01
  - document_root method optimized & bug fixed

0.13 2011/05/31