@@ -38,8 +38,8 @@ use base 'MojoX::Tusu::ComponentBase';
 
     sub get {
         
-        my ($self, $c) = @_;
-        $c->render(handler => 'tusu', template => '07/some_component/index2.html');
+        my ($self) = @_;
+        $self->controller->render(handler => 'tusu', template => '07/some_component/index2.html');
     }
 
 __END__
