@@ -1,6 +1,7 @@
 Revision history for Mojolicious-Plugin-Tusu
 
 0.30 2011/12/28
+  - Added redirect_to method.
 
 0.29 2011/12/28
   - Added get_component method.
